Refactor truck number display by removing the "Number:" prefix for consistency

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -58,13 +58,13 @@
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 1">
             <h3>Truck 1</h3>
-            <p>Number: BA 2 KHA 1234</p>
+            <p>BA 2 KHA 1234</p>
           </div>
 
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 2">
             <h3>Truck 2</h3>
-            <p>Number: BA 2 KHA   5678</p>
+            <p> BA 2 KHA   5678</p>
           </div>
 
           <div class="truck-card">
@@ -76,7 +76,7 @@
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 1">
             <h3>Truck 1</h3>
-            <p>Number: BA 2 KHA 1234</p>
+            <p>BA 2 KHA 1234</p>
           </div>
 
           <div class="truck-card">
@@ -88,25 +88,25 @@
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 3">
             <h3>Truck 3</h3>
-            <p>Number: BA 2 KHA   9101</p>  
+            <p> BA 2 KHA   9101</p>  
           </div>
 
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 1">
             <h3>Truck 1</h3>
-            <p>Number: BA 2 KHA 1234</p>
+            <p> BA 2 KHA 1234</p>
           </div>
 
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 2">
             <h3>Truck 2</h3>
-            <p>Number: BA 2 KHA   5678</p>
+            <p> BA 2 KHA   5678</p>
           </div>
 
           <div class="truck-card">
             <img src="images/truck.jpeg" alt="Truck 3">
             <h3>Truck 3</h3>
-            <p>Number: BA 2 KHA   9101</p>  
+            <p> BA 2 KHA   9101</p>  
           </div>
     
     <!-- Add more trucks as needed -->
