Add call-to-action banner with responsive styles for enhanced user engagement

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -163,7 +163,11 @@
       </div>
     </div>
   </div>
-    
+    <div class="cta-banner">
+          <h2>Need Fast & Reliable Delivery?</h2>
+          <p>Call us now or send an inquiry to get started!</p>
+          <a href="#" data-tab="contact" class="cta-button">Contact Us</a>
+        </div>
   </div>
 
     </div>
@@ -245,6 +249,10 @@
                 </ul>
             </div>
         </div>
+
+
+        
+
     </div>
 
     <!-- Contact Tab -->
@@ -298,6 +306,8 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
 </div>
 
 <script src="script.js"></script>
