--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -169,7 +169,16 @@
           <a href="#" data-tab="contact" class="cta-button">Contact Us</a>
         </div>
   </div>
-
+          <div class="coverage-map-section">
+            <h2 class="section-title">Nationwide Coverage Across Nepal</h2>
+            <p style="text-align: center; color: #555; margin-bottom: 20px;">
+              Our delivery routes span major cities and trade corridors—from Kathmandu to Biratnagar, Pokhara to Nepalgunj, and beyond.
+            </p>
+            <div class="map-container">
+              <!-- Replace src with your chosen map image -->
+              <img src="images/nepal-route-map.jpg" alt="Nepal Delivery Routes" style="width: 100%; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.1);">
+            </div>
+      </div>
     </div>
 
     <!-- About Us Tab -->
@@ -305,6 +314,22 @@
                 <p style="color: #666;">Daily: 9:00 AM - 8:00 PM</p>
             </div>
         </div>
+        <div class="map-section">
+        <h2 class="section-title">Visit Us at Our Itahari Office</h2>
+        <h4 style="color:linear-gradient(135deg, #A50021 0%, #FFD700 100%);; margin-bottom: 20px;">Room No. 12 — Bijaya Bhagwati Dhuwani Sewa</h4>
+
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps?q=26.637194,87.274389&hl=en&z=15&output=embed"
+              width="100%"
+              height="400"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+          </div>
+</div>
     </div>
     <br>
     <br>
