Add coverage map section and update styles for improved user information and engagement

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -163,22 +163,23 @@
       </div>
     </div>
   </div>
+
+          <div class="coverage-map-section">
+            <h2 class="section-title">Nationwide Coverage Across Nepal</h2>
+            <p class="coverage-description">
+              Our delivery routes span major cities and trade corridors—from Kathmandu to Biratnagar, Pokhara to Nepalgunj, and beyond.
+            </p>
+            <div class="map-container">
+              <img src="images/route.png" alt="Nepal Delivery Routes">
+            </div>
+          </div>
     <div class="cta-banner">
           <h2>Need Fast & Reliable Delivery?</h2>
           <p>Call us now or send an inquiry to get started!</p>
           <a href="#" data-tab="contact" class="cta-button">Contact Us</a>
         </div>
   </div>
-          <div class="coverage-map-section">
-            <h2 class="section-title">Nationwide Coverage Across Nepal</h2>
-            <p style="text-align: center; color: #555; margin-bottom: 20px;">
-              Our delivery routes span major cities and trade corridors—from Kathmandu to Biratnagar, Pokhara to Nepalgunj, and beyond.
-            </p>
-            <div class="map-container">
-              <!-- Replace src with your chosen map image -->
-              <img src="images/nepal-route-map.jpg" alt="Nepal Delivery Routes" style="width: 100%; border-radius: 20px; box-shadow: 0 8px 20px rgba(0,0,0,0.1);">
-            </div>
-      </div>
+          
     </div>
 
     <!-- About Us Tab -->
