Add footer section with contact information and enhance tab functionality for improved navigation

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -179,8 +179,10 @@
           <a href="#" data-tab="contact" class="cta-button">Contact Us</a>
         </div>
   </div>
-          
+
     </div>
+  
+
 
     <!-- About Us Tab -->
     <div id="about" class="tab-content">
@@ -210,6 +212,13 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
 
     <!-- Services Tab -->
     <div id="services" class="tab-content">
@@ -264,6 +273,13 @@
         
 
     </div>
+
+
+
+
+
+
+
 
     <!-- Contact Tab -->
     <div id="contact" class="tab-content">
@@ -332,9 +348,38 @@
           </div>
 </div>
     </div>
-    <br>
-    <br>
+   <br>
 </div>
+    <footer class="site-footer">
+      <div class="footer-container">
+        <div class="footer-column">
+          <h3>Bijaya Bhagwati Dhuwani Sewa</h3>
+          <p>Reliable truck transportation across Nepal. Safe, timely, and professional logistics solutions for every route.</p>
+        </div>
+
+        <div class="footer-column">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#" data-tab="home" class="tab-link">Home</a></li>
+            <li><a href="#" data-tab="about" class="tab-link">About Us</a></li>
+            <li><a href="#" data-tab="services" class="tab-link">Services</a></li>
+            <li><a href="#" data-tab="contact" class="tab-link">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-column">
+          <h4>Contact Info</h4>
+          <p>📍 Room No. 12, Itahari, Sunsari, Nepal</p>
+          <p>📞 +977 980-2761542</p>
+          <p>📞 +977 980-2771031</p>
+          <p>⏰ Daily: 9:00 AM – 8:00 PM</p>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 Bijaya Bhagwati Dhuwani Sewa. All rights reserved.</p>
+      </div>
+    </footer>
 
 <script src="script.js"></script>
 </body>
