Update company story and commitment sections for enhanced clarity and engagement

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -190,10 +190,14 @@
         <div class="card">
             <h3>Our Story</h3>
             <p>
-                Bijaya Bhagwati Dhuwani Sewa has 
+                Bijaya Bhagwati Dhuwani Sewa has been in the bussiness for over 5 years, providing reliable and efficient truck transportation services across Nepal.
+                Our journey began with a simple mission: to offer safe, timely, and cost-effective logistics solutions to businesses and individuals alike.
+                Over the years, we have grown our fleet and expanded our service areas, earning a reputation for professionalism and customer satisfaction.
             </p>
             <p>
-                Our commitment
+                Our commitment to quality service, transparent pricing, and personalized solutions has made us a trusted partner for countless clients.
+                Whether it's local deliveries, long-haul freight, or specialized cargo transport, we handle every shipment with care and dedication.
+                At Bijaya Bhagwati Dhuwani Sewa, we believe in building lasting relationships through exceptional service and unwavering reliability.
             </p>
         </div>
         
