Update vision statement for clarity and emphasis on trust and reliability

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -210,7 +210,7 @@
             </div>
             <div class="card">
                 <h3>Our Vision</h3>
-                <p>To be the leading .</p>
+                <p>To be the leading in the transportation worlf not just for the fame but rather for trust,reliablity and services.</p>
             </div>
             <div class="card">
                 <h3>Our Values</h3>
