Update services list for clarity and specificity

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -234,9 +234,9 @@
                 <h3>1. Nationwide Goods Delivery</h3>
                 <p>Professional .</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>here</li>
-                    <li>here</li>
-                    <li>here</li>
+                    <li>handling of bulk cargo</li>
+                    <li>On-time pickup and drop-off</li>
+                    <li>delivery across Nepal</li>
                     <li>ok</li>
                 </ul>
             </div>
