Update services section for clarity and specificity

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -232,23 +232,23 @@
         <div class="card-grid">
             <div class="card">
                 <h3>1. Nationwide Goods Delivery</h3>
-                <p>Professional .</p>
+                <p>Reliable delivery of goods across every corner of Nepal.</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>handling of bulk cargo</li>
+                    <li>Handling of bulk cargo</li>
                     <li>On-time pickup and drop-off</li>
-                    <li>delivery across Nepal</li>
-                    <li>ok</li>
+                    <li>Delivery across Nepal</li>
+                    <li>Secure and safe transportation</li>
                 </ul>
             </div>
             
             <div class="card">
-                <h3>2nd</h3>
-                <p>Complete.</p>
+                <h3>2. Long-Haul Transportation</h3>
+                <p>Efficient trucking solutions for long-distance and intercity routes..</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>here</li>
-                    <li>here</li>
-                    <li>here</li>
-                    <li>ok</li>
+                    <li>Transport between major cities and highways</li>
+                    <li>Dedicated trucks for large consignments</li>
+                    <li>Scheduled and regular route services</li>
+                    <li>Affordable rates for bulk shipments</li>
                 </ul>
             </div>
             
