Update services section for clarity and specificity

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -253,8 +253,8 @@
             </div>
             
             <div class="card">
-                <h3>3rd</h3>
-                <p>Complete.</p>
+                <h3>3. Local Distribution</h3>
+                <p>Quick and flexible transport for businesses and individuals within cities..</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
                     <li>here</li>
                     <li>here</li>
