Update services section for clarity and specificity

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -256,10 +256,10 @@
                 <h3>3. Local Distribution</h3>
                 <p>Quick and flexible transport for businesses and individuals within cities..</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>here</li>
-                    <li>here</li>
-                    <li>here</li>
-                    <li>ok</li>
+                    <li>Fast delivery within local areas</li>
+                    <li>Support for retail shops and suppliers</li>
+                    <li>Same-day or next-day distribution</li>
+                    <li>Reliable drivers with route expertise</li>
                 </ul>
             </div>
             
