--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -275,13 +275,13 @@
             </div>
 
             <div class="card">
-                <h3>3. Local Distribution</h3>
-                <p>Quick and flexible transport for businesses and individuals within cities.</p>
+                <h3>5. Specialized Cargo Handling</h3>
+                <p>Expert care for fragile, oversized, or valuable goods.</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>Fast delivery within local areas</li>
-                    <li>Support for retail shops and suppliers</li>
-                    <li>Same-day or next-day distribution</li>
-                    <li>Reliable drivers with route expertise</li>
+                    <li>Handling of fragile and sensitive items</li>
+                    <li>Oversized and heavy cargo solutions</li>
+                    <li>Extra security for valuable consignments</li>
+                    
                 </ul>
             </div>
 
@@ -295,7 +295,7 @@
                     <li>Reliable drivers with route expertise</li>
                 </ul>
             </div>
-            
+
         </div>
 
 
