Enhance services section with detailed descriptions and customer-centric features

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -163,6 +163,45 @@
       </div>
     </div>
   </div>
+<BR>
+<BR>
+
+    <!-- Truck Feature Card 2-->
+    <div class="truck-feature">
+      <div class="feature-card reverse">
+        <div class="feature-text">
+          <h2>Safe Cargo Handling</h2>
+          <p>
+            Your goods are important to us, and we treat them with the utmost care. From fragile packages to heavy cargo,
+             our trained staff ensures secure loading, safe transport, 
+             and careful unloading so your items arrive in perfect condition.
+          </p>
+          <hr>
+          <div class="feature-stats">
+            <div class="stat">
+              <h3>100%</h3>
+              <p>Security</p>
+            </div>
+            <div class="stat">
+              <h3>24/7</h3>
+              <p>GPS Tracking</p>
+            </div>
+            <div class="stat">
+              <h3>Zero</h3>
+              <p>Compromise on Safety</p>
+            </div>
+            <div class="stat">
+              <h3>Trained</h3>
+              <p>Professional Staff</p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-image">
+          <img src="images/Truck_security.jpeg" alt="Our Truck">
+        </div>
+      </div>
+    </div>
+
 
           <div class="coverage-map-section">
             <h2 class="section-title">Nationwide Coverage Across Nepal</h2>
@@ -235,7 +274,6 @@
                 <p>Reliable delivery of goods across every corner of Nepal.</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
                     <li>Handling of bulk cargo</li>
-                    <li>On-time pickup and drop-off</li>
                     <li>Delivery across Nepal</li>
                     <li>Secure and safe transportation</li>
                 </ul>
@@ -246,7 +284,6 @@
                 <p>Efficient trucking solutions for long-distance and intercity routes..</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
                     <li>Transport between major cities and highways</li>
-                    <li>Dedicated trucks for large consignments</li>
                     <li>Scheduled and regular route services</li>
                     <li>Affordable rates for bulk shipments</li>
                 </ul>
@@ -257,7 +294,6 @@
                 <p>Quick and flexible transport for businesses and individuals within cities.</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
                     <li>Fast delivery within local areas</li>
-                    <li>Support for retail shops and suppliers</li>
                     <li>Same-day or next-day distribution</li>
                     <li>Reliable drivers with route expertise</li>
                 </ul>
@@ -270,7 +306,6 @@
                     <li>Warehouse-to-store transportation</li>
                     <li>Movement of raw materials and supplies</li>
                     <li>Contract-based logistics support</li>
-                    <li>Customized solutions for companies</li>
                 </ul>
             </div>
 
@@ -286,13 +321,12 @@
             </div>
 
             <div class="card">
-                <h3>3. Local Distribution</h3>
-                <p>Quick and flexible transport for businesses and individuals within cities.</p>
+                <h3>6. Customer-Centric Features</h3>
+                <p>Service built around customer satisfaction and reliability.</p>
                 <ul style="color: #666; margin-top: 15px; padding-left: 20px;">
-                    <li>Fast delivery within local areas</li>
-                    <li>Support for retail shops and suppliers</li>
-                    <li>Same-day or next-day distribution</li>
-                    <li>Reliable drivers with route expertise</li>
+                    <li>GPS tracking for real-time updates</li>
+                    <li>Transparent and fair pricing</li>
+                    <li>Discounts for loyal and bulk customers</li>
                 </ul>
             </div>
 
