Add team section with member details and update CTA button text for clarity

--- a/Dhuwani.html
+++ b/Dhuwani.html
@@ -216,16 +216,43 @@
               <img src="images/route.png" alt="Nepal Delivery Routes">
             </div>
           </div>
-    <div class="cta-banner">
+        <div class="cta-banner">
           <h2>Need Fast & Reliable Delivery?</h2>
           <p>Call us now or send an inquiry to get started!</p>
-          <a href="#" data-tab="contact" class="cta-button">Contact Us</a>
+          <a href="#" data-tab="contact" class="cta-button">Contact Us Here</a>
           
         </div>
   </div>
 
     </div>
+
   
+<!-- Team Section -->
+<div class="container team-section">
+  <h2 class="section-title">Our Team</h2>
+  <div class="team-container">
+    
+    <!-- Managing Director -->
+    <div class="team-member">
+      <img src="images/managing-director.jpg" alt="Managing Director">
+      <h3>Mr. NARAYAN PR. GAUTAM</h3>
+      <p>Managing Director</p>
+    </div>
+
+    <!-- Manager -->
+    <div class="team-member">
+      <img src="images/MANAGER.jpg" alt="Manager">
+      <h3>Mr. NIRAG GAUTAM</h3>
+      <p>Manager</p>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+
 <div class="container">
    
 
