Update values section with revised heading and content

--- a/Index.html
+++ b/Index.html
@@ -284,8 +284,10 @@
                 <p>To be the leading in the </p>
             </div>
             <div class="card">
-                <h3>Our Values</h3>
-                <p>Quality, professionalism, reliability, and customer-first approach guide everything we do.</p>
+                <h3>Our Values in this</h3>
+                <p>Quality, professionalism, reliability, and customer-first approach guide everything we do this is very ............
+                  .........................................."
+                  ......................".</p>
             </div>
         </div>
     </div>
