changed img sub folder

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="gallery-container">
       <!-- Truck Cards -->
       <div class="truck-card">
-        <img src="images/truck.jpeg" alt="Truck 1">
+        <img src="./images/truck.jpeg" alt="Truck 1">
         <h3>Truck 1</h3>
         <p>BA 2 KHA 1234</p>
       </div>
