--- a/index.html
+++ b/index.html
@@ -479,8 +479,12 @@
 
       <div class="footer-bottom">
         <p>&copy; 2025 Bijaya Bhagwati Dhuwani Sewa. All rights reserved.</p>
-        <p><p>Website Created By <a href="https://www.linkedin.com/in/nikesh-gautam-1479b734b/" target="_blank">Nikesh Gautam</a></p></p>
+        <p>
+          Website Created By 
+          <a href="https://www.linkedin.com/in/nikesh-gautam-1479b734b/" target="_blank" class="creator-link"><u>Nikesh Gautam</u></a>
+        </p>
       </div>
+
     </footer>
 
 <script src="script.js"></script>
