--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="card-grid">
             <div class="card">
                 <h3>Our Mission</h3>
-                <p>To provide best service we can to you regarding the safety and security of ypur product .</p>
+                <p>To provide best service we can to you regarding the safety and security of your product .</p>
             </div>
             <div class="card">
                 <h3>Our Vision</h3>
