--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p class="hero-subtitle">
                 Providing exceptional truck transportation services to you with safe, 
                 reliable, and cost-effective logistics solutions — whether it's local deliveries, long-haul freight, 
-                or bulk cargo transport, we ensure timely delivery, secure handling, and trusted service every mile of the way.
+                or bulk cargo transport, we ensure timely delivery, secure handling, .
             </p>
             <a href="#" class="cta-button" data-tab="about">Explre More About Us</a>
         </div>
