Update hero title in index.html, improve comments and error handling in save_contact.php, enhance truck gallery functionality in script.js, and remove deprecated view_contact.php file.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- Home Tab -->
     <div id="home" class="tab-content active">
         <div class="hero-section">
-            <h1 class="hero-title">Welcome to Bijaya Bhagwati Dhuwani Sewa</h1>
+            <h1 class="hero-title">Welcome to Bijaya Bhagwati Dhuwani </h1>
             <p class="hero-subtitle">
                 Providing exceptional truck transportation services to you with safe, 
                 reliable, and cost-effective logistics solutions — whether it's local deliveries, long-haul freight, 
